test/zinc_source/compile_errors/decorators/02_decorator_not_callable.zn
// expected-error: decorator 'marker' is not callable
const marker = 1

@marker
fn value() -> i64 {
    return 1
}

fn main() {
    print(value())
}
